[gd_scene load_steps=7 format=3 uid="uid://dvoj03iivka44"]

[ext_resource type="Script" path="res://addons/goventure/visual_scripting/nodes/sequence_node.gd" id="1_t8tqw"]
[ext_resource type="PackedScene" uid="uid://b3qela1413318" path="res://addons/goventure/visual_scripting/connections/FlowOutput.tscn" id="2_3ekub"]
[ext_resource type="FontFile" uid="uid://cfol7ig1l2b5" path="res://fonts/Ubuntu/Ubuntu-Bold.ttf" id="4_gx70i"]
[ext_resource type="FontFile" uid="uid://cc4xli25271fd" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Bold.ttf" id="5_eattu"]
[ext_resource type="PackedScene" uid="uid://orv5ncqws73f" path="res://addons/goventure/visual_scripting/action_label.tscn" id="5_p0wm7"]
[ext_resource type="PackedScene" uid="uid://de1m4sv5oavl7" path="res://addons/goventure/visual_scripting/connections/Input.tscn" id="6_msyqi"]

[node name="SequenceNode" type="Control" groups=["Gate"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_t8tqw")
output_node_scene = ExtResource("2_3ekub")
output_label_scene = ExtResource("5_p0wm7")

[node name="Sprite" type="Node2D" parent="."]

[node name="Outline" type="ColorRect" parent="Sprite"]
unique_name_in_owner = true
z_index = 1000
offset_right = 220.0
offset_bottom = 175.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Sprite"]
unique_name_in_owner = true
z_index = 1000
offset_left = 2.0
offset_top = 2.0
offset_right = 218.0
offset_bottom = 173.0
mouse_filter = 2

[node name="Title" type="Label" parent="Sprite"]
unique_name_in_owner = true
z_index = 1000
offset_left = 4.0
offset_top = 3.0
offset_right = 217.0
offset_bottom = 33.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_gx70i")
theme_override_font_sizes/font_size = 26
text = "Sequence Node"
horizontal_alignment = 1

[node name="OutputLabel" type="VBoxContainer" parent="Sprite"]
unique_name_in_owner = true
z_index = 1000
offset_left = 2.0
offset_top = 40.0
offset_right = 216.0
offset_bottom = 111.0
theme_override_constants/separation = 28

[node name="ActionLabel" parent="Sprite/OutputLabel" instance=ExtResource("5_p0wm7")]
layout_mode = 2
text = "1 "

[node name="ActionLabel2" parent="Sprite/OutputLabel" instance=ExtResource("5_p0wm7")]
layout_mode = 2
text = "2 "

[node name="Outputs" type="VBoxContainer" parent="Sprite"]
unique_name_in_owner = true
show_behind_parent = true
offset_left = 258.0
offset_top = 33.0
offset_right = 306.0
offset_bottom = 81.0

[node name="Output" parent="Sprite/Outputs" instance=ExtResource("2_3ekub")]
layout_mode = 2

[node name="Output2" parent="Sprite/Outputs" instance=ExtResource("2_3ekub")]
layout_mode = 2

[node name="OutputButtons" type="HBoxContainer" parent="Sprite"]
unique_name_in_owner = true
z_index = 1000
offset_left = 15.0
offset_top = 140.0
offset_right = 209.0
offset_bottom = 167.0
theme_override_constants/separation = 5
alignment = 2

[node name="RemoveOutputButton" type="Button" parent="Sprite/OutputButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_eattu")
disabled = true
text = " - "

[node name="AddOutputButton" type="Button" parent="Sprite/OutputButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_eattu")
text = " + "

[node name="Inputs" type="Control" parent="."]
unique_name_in_owner = true
show_behind_parent = true
anchors_preset = 0
offset_left = -64.0
offset_top = 56.0
offset_right = -64.0
offset_bottom = 56.0
scale = Vector2(2, 2)

[node name="Input" parent="Inputs" instance=ExtResource("6_msyqi")]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = 1.99998
offset_right = 47.0
offset_bottom = 50.0
rotation = -0.0121394
connection_types = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 0, 220, 0, 218, 174, 2, 174)

[node name="ModeTitle" type="Label" parent="."]
z_index = 1000
layout_mode = 0
offset_left = 6.0
offset_top = 115.0
offset_right = 124.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_eattu")
text = "On end reached:"

[node name="ModeSelection" type="OptionButton" parent="."]
unique_name_in_owner = true
z_index = 1000
layout_mode = 0
offset_left = 6.0
offset_top = 138.0
offset_right = 143.0
offset_bottom = 168.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_eattu")
theme_override_font_sizes/font_size = 17
item_count = 3
selected = 0
popup/item_0/text = "Start over"
popup/item_0/id = 0
popup/item_1/text = "Repeat last"
popup/item_1/id = 1
popup/item_2/text = "Stop"
popup/item_2/id = 2

[connection signal="pressed" from="Sprite/OutputButtons/RemoveOutputButton" to="." method="_on_remove_output_button_pressed"]
[connection signal="button_down" from="Sprite/OutputButtons/AddOutputButton" to="." method="_on_add_output_button_button_down"]
[connection signal="item_selected" from="ModeSelection" to="." method="_on_mode_selection_item_selected"]
